--- a/example-uwsgi.ini
+++ b/example-uwsgi.ini
@@ -1,7 +1,7 @@
 [uwsgi]
 gevent = 100
 http-websockets=True
-module = bla.wsgi:application
+module = blabla.wsgi:application
 static-map = /static=/path/to/staticdir
 https = =0,mycert.crt,mycert.key,HIGH
 shared-socket = 0.0.0.0:<port>
